native/include/photon/photon.h


typedef int32_t ph_bool;
typedef struct ph_range {
  double lo;
  double hi;
} ph_range;
typedef int32_t ph_result;
PH_API ph_result PH_CALL ph_fin_ema(const double* values, int32_t count, int32_t period,
                                    double* out);
PH_API ph_result PH_CALL ph_fin_rolling_std(const double* values, int32_t count, int32_t period,
                                            double* out);
PH_API ph_result PH_CALL ph_fin_bollinger(const double* close, int32_t count, int32_t period,
                                          double k, double* out_middle, double* out_upper,
                                          double* out_lower);
PH_API ph_result PH_CALL ph_fin_rsi(const double* close, int32_t count, int32_t period,
                                    double* out);
PH_API ph_result PH_CALL ph_fin_macd(const double* close, int32_t count, int32_t fast, int32_t slow,
                                     int32_t signal_period, double* out_macd, double* out_signal,
                                     double* out_histogram);
PH_API ph_result PH_CALL ph_fin_vwap(const double* high, const double* low, const double* close,
                                     const double* volume, int32_t count, double* out);
PH_API ph_result PH_CALL ph_fin_true_range(const double* high, const double* low,
                                           const double* close, int32_t count, double* out);
PH_API ph_result PH_CALL ph_fin_atr(const double* high, const double* low, const double* close,
                                    int32_t count, int32_t period, double* out);
PH_API int32_t PH_CALL ph_fin_first_finite(const double* values, int32_t count);
PH_API ph_result PH_CALL ph_fin_stochastic(const double* high, const double* low,
                                           const double* close, int32_t count, int32_t k_period,
                                           int32_t d_period, double* out_k, double* out_d);
PH_API ph_result PH_CALL ph_fin_keltner(const double* high, const double* low, const double* close,
                                        int32_t count, int32_t period, double mult,
                                        int32_t atr_period, double* out_middle, double* out_upper,
                                        double* out_lower);
PH_API ph_result PH_CALL ph_fin_obv(const double* close, const double* volume, int32_t count,
                                    double* out);
PH_API ph_result PH_CALL ph_fin_ichimoku(const double* high, const double* low, int32_t count,
                                         int32_t conv_period, int32_t base_period,
                                         int32_t span_b_period, double* out_conversion,
                                         double* out_base, double* out_span_a, double* out_span_b);
PH_API ph_result PH_CALL ph_fin_adx(const double* high, const double* low, const double* close,
                                    int32_t count, int32_t period, double* out_adx,
                                    double* out_plus_di, double* out_minus_di);
PH_API ph_result PH_CALL ph_fin_supertrend(const double* high, const double* low,
                                           const double* close, int32_t count, int32_t period,
                                           double mult, double* out_trend, double* out_direction);
PH_API ph_result PH_CALL ph_fin_cci(const double* high, const double* low, const double* close,
                                    int32_t count, int32_t period, double* out);
PH_API ph_result PH_CALL ph_fin_mfi(const double* high, const double* low, const double* close,
                                    const double* volume, int32_t count, int32_t period,
                                    double* out);
PH_API ph_result PH_CALL ph_fin_williams_r(const double* high, const double* low,
                                           const double* close, int32_t count, int32_t period,
                                           double* out);
PH_API ph_result PH_CALL ph_fin_aroon(const double* high, const double* low, int32_t count,
                                      int32_t period, double* out_up, double* out_down,
                                      double* out_oscillator);
PH_API ph_result PH_CALL ph_fin_donchian(const double* high, const double* low, int32_t count,
                                         int32_t period, double* out_middle, double* out_upper,
                                         double* out_lower);
PH_API ph_result PH_CALL ph_fin_parabolic_sar(const double* high, const double* low, int32_t count,
                                              double step, double max_step, double* out);
PH_API const double* PH_CALL ph_fin_fib_ratios(int32_t* out_count);
PH_API ph_result PH_CALL ph_fin_fib_retracements(double high, double low, const double* ratios,
                                                 int32_t count, double* out_price);
typedef struct ph_pivot_levels {
  double pivot;
  double r1;
  double r2;
  double r3;
  double s1;
  double s2;
  double s3;
} ph_pivot_levels;
PH_API ph_result PH_CALL ph_fin_pivot_points(double high, double low, double close,
                                             ph_pivot_levels* out);
PH_API ph_result PH_CALL ph_fin_heikin_ashi(const double* open, const double* high,
                                            const double* low, const double* close, int32_t count,
                                            double* out_open, double* out_high, double* out_low,
                                            double* out_close);
typedef struct ph_brick {
  double  open;
  double  close;
  int32_t x;
  ph_bool up;
} ph_brick;
PH_API ph_result PH_CALL ph_fin_renko(const double* close, int32_t count, double brick_size,
                                      ph_brick* out, int32_t capacity, int32_t* out_count);
PH_API ph_result PH_CALL ph_fin_line_break(const double* close, int32_t count, int32_t lines,
                                           ph_brick* out, int32_t capacity, int32_t* out_count);
typedef struct ph_pf_column {
  double  from;
  double  to;
  int32_t col;
  int32_t kind;
} ph_pf_column;
PH_API ph_result PH_CALL ph_fin_point_and_figure(const double* high, const double* low,
                                                 int32_t count, double box_size, int32_t reversal,
                                                 ph_pf_column* out, int32_t capacity,
                                                 int32_t* out_count);
typedef struct ph_volume_profile {
  double  bin_size;
  double  price_min;
  double  price_max;
  int32_t poc_index;
} ph_volume_profile;
PH_API ph_result PH_CALL ph_fin_volume_profile(const double* price, const double* volume,
                                               int32_t count, int32_t bins, double* out_levels,
                                               double* out_volume, ph_volume_profile* out_info);
PH_API ph_result PH_CALL ph_fin_depth(const double* bid_price, const double* bid_size,
                                      int32_t bid_count, const double* ask_price,
                                      const double* ask_size, int32_t ask_count,
                                      double* out_bid_price, double* out_bid_cum,
                                      double* out_ask_price, double* out_ask_cum);
PH_API ph_result PH_CALL ph_fin_resample_ohlc(const double* time, const double* open,
                                              const double* high, const double* low,
                                              const double* close, const double* volume,
                                              int32_t count, double bucket_ms, double* out_time,
                                              double* out_open, double* out_high, double* out_low,
                                              double* out_close, double* out_volume,
                                              int32_t capacity, int32_t* out_count);
typedef struct ph_drawdown {
  double  max_drawdown;
  int32_t trough_index;
  int32_t peak_index;
} ph_drawdown;
PH_API ph_result PH_CALL ph_fin_drawdown(const double* equity, int32_t count, double* out_values,
                                         double* out_peak, ph_drawdown* out_info);
typedef struct ph_grid_info {
  int32_t  cols;
  int32_t  rows;
  ph_range x;
  ph_range y;
} ph_grid_info;
PH_API ph_result PH_CALL ph_stat_histogram(const double* values, int32_t count, int32_t bins,
                                           double lo, double hi, double* out_edges,
                                           double* out_counts, double* out_centers,
                                           int32_t capacity, int32_t* out_bins);
PH_API ph_result PH_CALL ph_stat_histogram_edges(const double* values, int32_t count,
                                                 const double* edges, int32_t edge_count,
                                                 double* out_counts, double* out_centers);
PH_API ph_result PH_CALL ph_stat_hist2d(const double* x, const double* y, int32_t count,
                                        int32_t cols, int32_t rows, ph_range x_range,
                                        ph_range y_range, double* out_values, int32_t capacity,
                                        ph_grid_info* out_info);
PH_API ph_result PH_CALL ph_stat_quantile(const double* sorted, int32_t count, double q,
                                          double* out);
typedef struct ph_box_stats {
  double  min;
  double  q1;
  double  median;
  double  q3;
  double  max;
  double  whisker_lo;
  double  whisker_hi;
  int32_t outlier_count;
  ph_bool valid;
} ph_box_stats;
PH_API ph_result PH_CALL ph_stat_box(const double* values, int32_t count, ph_box_stats* out,
                                     double* out_outliers, int32_t capacity);
PH_API ph_result PH_CALL ph_stat_kde(const double* values, int32_t count, double lo, double hi,
                                     int32_t points, double* out_x, double* out_y);
PH_API ph_result PH_CALL ph_stat_fft(double* re, double* im, int32_t count);
PH_API ph_result PH_CALL ph_stat_spectrogram(const double* signal, int32_t count, int32_t fft_size,
                                             int32_t hop, double sample_rate, double* out_values,
                                             int32_t capacity, ph_grid_info* out_info);
typedef struct ph_linear_fit {
  double  slope;
  double  intercept;
  double  r2;
  double  stderror;
  int32_t n;
} ph_linear_fit;
PH_API ph_result PH_CALL ph_stat_linear_regression(const double* x, const double* y, int32_t count,
                                                   ph_linear_fit* out);
PH_API ph_result PH_CALL ph_stat_linear_trend(const double* x, const double* y, int32_t count,
                                              int32_t points, double band, double* out_x,
                                              double* out_y, double* out_lower, double* out_upper);
PH_API ph_result PH_CALL ph_stat_loess(const double* x, const double* y, int32_t count,
                                       double bandwidth, int32_t points, double* out_x,
                                       double* out_y, int32_t capacity, int32_t* out_count);
PH_API ph_result PH_CALL ph_stat_ecdf(const double* values, int32_t count, double* out_x,
                                      double* out_y, int32_t capacity, int32_t* out_count);
PH_API ph_result PH_CALL ph_stat_zscore(const double* values, int32_t count, double* out);
PH_API ph_result PH_CALL ph_stat_correlation(const double* a, const double* b, int32_t count,
                                             double* out);
PH_API ph_result PH_CALL ph_stat_corr_matrix(const double* const* columns, int32_t k,
                                             int32_t count, double* out);
typedef int32_t ph_window;
PH_API ph_result PH_CALL ph_stat_window(ph_window window, int32_t count, double* out);
PH_API ph_result PH_CALL ph_stat_welch(const double* signal, int32_t count, int32_t segment,
                                       double overlap, ph_window window, double sample_rate,
                                       double* out_frequencies, double* out_power,
                                       int32_t capacity, int32_t* out_bins);
PH_API ph_result PH_CALL ph_stat_savitzky_golay(const double* values, int32_t count,
                                                int32_t window, int32_t order, double* out);
PH_API ph_result PH_CALL ph_stat_cross_correlate(const double* a, const double* b, int32_t count,
                                                 int32_t max_lag, ph_bool normalize,
                                                 int32_t* out_lags, double* out_values,
                                                 int32_t capacity, int32_t* out_count);