native/bindings/csharp/Photon.g.cs


    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_ema")]
    public static extern int ph_fin_ema(double[] values, int count, int period, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_rolling_std")]
    public static extern int ph_fin_rolling_std(double[] values, int count, int period, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_bollinger")]
    public static extern int ph_fin_bollinger(double[] close, int count, int period, double k, out double out_middle, out double out_upper, out double out_lower);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_rsi")]
    public static extern int ph_fin_rsi(double[] close, int count, int period, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_macd")]
    public static extern int ph_fin_macd(double[] close, int count, int fast, int slow, int signal_period, out double out_macd, out double out_signal, out double out_histogram);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_vwap")]
    public static extern int ph_fin_vwap(double[] high, double[] low, double[] close, double[] volume, int count, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_true_range")]
    public static extern int ph_fin_true_range(double[] high, double[] low, double[] close, int count, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_atr")]
    public static extern int ph_fin_atr(double[] high, double[] low, double[] close, int count, int period, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_first_finite")]
    public static extern int ph_fin_first_finite(double[] values, int count);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_stochastic")]
    public static extern int ph_fin_stochastic(double[] high, double[] low, double[] close, int count, int k_period, int d_period, out double out_k, out double out_d);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_keltner")]
    public static extern int ph_fin_keltner(double[] high, double[] low, double[] close, int count, int period, double mult, int atr_period, out double out_middle, out double out_upper, out double out_lower);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_obv")]
    public static extern int ph_fin_obv(double[] close, double[] volume, int count, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_ichimoku")]
    public static extern int ph_fin_ichimoku(double[] high, double[] low, int count, int conv_period, int base_period, int span_b_period, out double out_conversion, out double out_base, out double out_span_a, out double out_span_b);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_adx")]
    public static extern int ph_fin_adx(double[] high, double[] low, double[] close, int count, int period, out double out_adx, out double out_plus_di, out double out_minus_di);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_supertrend")]
    public static extern int ph_fin_supertrend(double[] high, double[] low, double[] close, int count, int period, double mult, out double out_trend, out double out_direction);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_cci")]
    public static extern int ph_fin_cci(double[] high, double[] low, double[] close, int count, int period, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_mfi")]
    public static extern int ph_fin_mfi(double[] high, double[] low, double[] close, double[] volume, int count, int period, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_williams_r")]
    public static extern int ph_fin_williams_r(double[] high, double[] low, double[] close, int count, int period, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_aroon")]
    public static extern int ph_fin_aroon(double[] high, double[] low, int count, int period, out double out_up, out double out_down, out double out_oscillator);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_donchian")]
    public static extern int ph_fin_donchian(double[] high, double[] low, int count, int period, out double out_middle, out double out_upper, out double out_lower);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_parabolic_sar")]
    public static extern int ph_fin_parabolic_sar(double[] high, double[] low, int count, double step, double max_step, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_fib_ratios")]
    public static extern IntPtr ph_fin_fib_ratios(out int out_count);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_fib_retracements")]
    public static extern int ph_fin_fib_retracements(double high, double low, double[] ratios, int count, out double out_price);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_pivot_points")]
    public static extern int ph_fin_pivot_points(double high, double low, double close, out ph_pivot_levels @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_heikin_ashi")]
    public static extern int ph_fin_heikin_ashi(double[] open, double[] high, double[] low, double[] close, int count, out double out_open, out double out_high, out double out_low, out double out_close);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_renko")]
    public static extern int ph_fin_renko(double[] close, int count, double brick_size, out ph_brick @out, int capacity, out int out_count);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_line_break")]
    public static extern int ph_fin_line_break(double[] close, int count, int lines, out ph_brick @out, int capacity, out int out_count);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_point_and_figure")]
    public static extern int ph_fin_point_and_figure(double[] high, double[] low, int count, double box_size, int reversal, out ph_pf_column @out, int capacity, out int out_count);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_volume_profile")]
    public static extern int ph_fin_volume_profile(double[] price, double[] volume, int count, int bins, out double out_levels, out double out_volume, out ph_volume_profile out_info);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_depth")]
    public static extern int ph_fin_depth(double[] bid_price, double[] bid_size, int bid_count, double[] ask_price, double[] ask_size, int ask_count, out double out_bid_price, out double out_bid_cum, out double out_ask_price, out double out_ask_cum);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_resample_ohlc")]
    public static extern int ph_fin_resample_ohlc(double[] time, double[] open, double[] high, double[] low, double[] close, double[] volume, int count, double bucket_ms, out double out_time, out double out_open, out double out_high, out double out_low, out double out_close, out double out_volume, int capacity, out int out_count);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_fin_drawdown")]
    public static extern int ph_fin_drawdown(double[] equity, int count, out double out_values, out double out_peak, out ph_drawdown out_info);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_histogram")]
    public static extern int ph_stat_histogram(double[] values, int count, int bins, double lo, double hi, out double out_edges, out double out_counts, out double out_centers, int capacity, out int out_bins);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_histogram_edges")]
    public static extern int ph_stat_histogram_edges(double[] values, int count, double[] edges, int edge_count, out double out_counts, out double out_centers);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_hist2d")]
    public static extern int ph_stat_hist2d(double[] x, double[] y, int count, int cols, int rows, ph_range x_range, ph_range y_range, out double out_values, int capacity, out ph_grid_info out_info);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_quantile")]
    public static extern int ph_stat_quantile(double[] sorted, int count, double q, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_box")]
    public static extern int ph_stat_box(double[] values, int count, out ph_box_stats @out, out double out_outliers, int capacity);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_kde")]
    public static extern int ph_stat_kde(double[] values, int count, double lo, double hi, int points, out double out_x, out double out_y);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_fft")]
    public static extern int ph_stat_fft(out double re, out double im, int count);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_spectrogram")]
    public static extern int ph_stat_spectrogram(double[] signal, int count, int fft_size, int hop, double sample_rate, out double out_values, int capacity, out ph_grid_info out_info);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_linear_regression")]
    public static extern int ph_stat_linear_regression(double[] x, double[] y, int count, out ph_linear_fit @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_linear_trend")]
    public static extern int ph_stat_linear_trend(double[] x, double[] y, int count, int points, double band, out double out_x, out double out_y, out double out_lower, out double out_upper);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_loess")]
    public static extern int ph_stat_loess(double[] x, double[] y, int count, double bandwidth, int points, out double out_x, out double out_y, int capacity, out int out_count);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_ecdf")]
    public static extern int ph_stat_ecdf(double[] values, int count, out double out_x, out double out_y, int capacity, out int out_count);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_zscore")]
    public static extern int ph_stat_zscore(double[] values, int count, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_correlation")]
    public static extern int ph_stat_correlation(double[] a, double[] b, int count, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_corr_matrix")]
    public static extern int ph_stat_corr_matrix(IntPtr columns, int k, int count, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_window")]
    public static extern int ph_stat_window(int window, int count, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_welch")]
    public static extern int ph_stat_welch(double[] signal, int count, int segment, double overlap, int window, double sample_rate, out double out_frequencies, out double out_power, int capacity, out int out_bins);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_savitzky_golay")]
    public static extern int ph_stat_savitzky_golay(double[] values, int count, int window, int order, out double @out);

    [DllImport(Library, CallingConvention = Cc, EntryPoint = "ph_stat_cross_correlate")]
    public static extern int ph_stat_cross_correlate(double[] a, double[] b, int count, int max_lag, int normalize, out int out_lags, out double out_values, int capacity, out int out_count);
